...
                        android:inputType="number"
                        android:layout_width="100dp"
                        android:layout_height="30dp"
                        android:layout_marginStart="10dp"
                        android:background="@drawable/white_edit_text"
                        android:fontFamily="@font/poppins"
                        android:hint="500"
                        android:paddingStart="10dp"
                        android:textColor="@color/secondaryDark"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>

        <Button
            android:id="@+id/conversionButton"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/primary_btn_background"
            android:fontFamily="@font/poppins_medium"
            android:text="Convert"
...
